--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,10 @@ Flask-RESTful==0.3.5
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+pyodbc==3.0.10
 python-dateutil==2.4.2
 pytz==2015.7
+simplejson==3.8.2
 six==1.10.0
+SQLAlchemy==1.0.12
 Werkzeug==0.11.4
