--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 aniso8601==1.1.0
 Flask==0.10.1
+flask-marshmallow==0.6.2
 Flask-RESTful==0.3.5
+Flask-SQLAlchemy==2.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 marshmallow==2.6.0
+marshmallow-sqlalchemy==0.8.1
+numpy==1.10.4
+pandas==0.17.1
 pyodbc==3.0.10
 python-dateutil==2.4.2
 pytz==2015.7
+scipy==0.17.0
 simplejson==3.8.2
 six==1.10.0
 SQLAlchemy==1.0.12
