--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,12 @@ Jinja2==2.8
 MarkupSafe==0.23
 marshmallow==2.6.0
 marshmallow-sqlalchemy==0.8.1
-numpy==1.10.4
-pandas==0.17.1
+numpy==numpy-1.10.4+mkl-cp27-cp27m-win32.whl
+pandas==pandas-0.17.1-cp27-none-win32.whl
 pyodbc==3.0.10
 python-dateutil==2.4.2
 pytz==2015.7
-scipy==0.17.0
+scipy==scipy-0.17.0-cp27-none-win32.whl
 simplejson==3.8.2
 six==1.10.0
 SQLAlchemy==1.0.12
