--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+--find-links wheelhouse
 aniso8601==1.1.0
 Flask==0.10.1
+Flask-Cors==2.1.2
 flask-marshmallow==0.6.2
 Flask-RESTful==0.3.5
 Flask-SQLAlchemy==2.1
